--- a/_posts/2025-05-24-street-festa2025.md
+++ b/_posts/2025-05-24-street-festa2025.md
@@ -89,10 +89,12 @@ layout: post
 
 ## 個人的振り返り
 
-### 犯した過ち等
+### 犯した過ち等(ごめんなさい)
 
 - 定員制の更衣室でもらった引き換え用の紙を約3分でなくす
   - ちなみに家に帰っても見つからなかったのでマジの紛失、(もしかしたら自分は紛失を司る神なのでは？と思った、店員さん、その節はご迷惑をおかけしました…)
+- 着てるときの行先を他の人にほぼ委ねる
+  - "参加すること"が目的になってて着れた時点で割と満足してしまってました…
 - ミラ子からもらったたこ焼きの箸を落とす
 - 行くところを勘違いして道を逆走しそうになる
 
