Twitter Cards Support
Twitter Cards Support

--- a/_posts/2025-05-24-street-festa2025.md
+++ b/_posts/2025-05-24-street-festa2025.md
@@ -1,6 +1,8 @@
 ---
 title: "ストフェスに行ってみた(2025)"
 layout: post
+description: "ちょうど近くでストフェスがあったので行って着ました。"
+image: "20250524/selfie.jpg"
 ---
 
 ちょうど近くでストフェスがあったので行って着ました。
