--- a/_posts/2025-08-03-heyao.md
+++ b/_posts/2025-08-03-heyao.md
@@ -1,11 +1,13 @@
 ---
 title: "河妖屋実店舗に行ってきた"
 layout: post
-description: "河妖屋実店舗に行ってきた"
-image: "20250524/selfie.jpg"
+description: "近くに河妖屋実店舗が開店したので行ってきた"
+image: "20250803/display-kigurumi-01.jpg"
 ---
 
 着ぐるみを製作している河妖工房の実店舗が大阪にできるということを聞き、行ってきました！
+
+
 
 ## 店舗が入っているビルまで移動
 
@@ -22,11 +24,15 @@ image: "20250524/selfie.jpg"
 
 予約番号を伝えた後、スリッパに履き替え店内に入ってみると、着ぐるみのお面がずらりと並んでいました！
 
-<img src="../assets/images/20250803/display-kigurumi-01.jpg" alt="着ぐるみ展示品1" style="width: 75%;"><img src="../assets/images/20250803/display-kigurumi-02.jpg" alt="着ぐるみ展示品2" style="width: 75%;">
+<img src="../assets/images/20250803/display-kigurumi-01.jpg" alt="着ぐるみ展示品1" style="width: 75%;">
+
+<img src="../assets/images/20250803/display-kigurumi-02.jpg" alt="着ぐるみ展示品2" style="width: 75%;">
 
 棚には着ぐるみだけではなくドールスーツやドール面なども…(GitHubの規約に配慮して一部モザイク)
 
-<img src="../assets/images/20250803/display-etc-01.jpg" alt="その他展示品1" style="width: 75%;"><img src="../assets/images/20250803/display-etc-02.jpg" alt="その他展示品2" style="width: 75%;">
+<img src="../assets/images/20250803/display-etc-01.jpg" alt="その他展示品1" style="width: 75%;">
+
+<img src="../assets/images/20250803/display-etc-02.jpg" alt="その他展示品2" style="width: 75%;">
 
 壁には着ぐるみの写真も貼ってありました！(with ミクさん)
 
