--- a/_posts/2025-08-03-heyao.md
+++ b/_posts/2025-08-03-heyao.md
@@ -25,24 +25,23 @@ image: "20250803/display-kigurumi-01.jpg"
 予約番号を伝えた後、スリッパに履き替え店内に入ってみると、着ぐるみのお面がずらりと並んでいました！
 
 <img src="../assets/images/20250803/display-kigurumi-01.jpg" alt="着ぐるみ展示品1" style="width: 75%;">
-
+  
 <img src="../assets/images/20250803/display-kigurumi-02.jpg" alt="着ぐるみ展示品2" style="width: 75%;">
 
 棚には着ぐるみだけではなくドールスーツやドール面なども…(GitHubの規約に配慮して一部モザイク)
 
 <img src="../assets/images/20250803/display-etc-01.jpg" alt="その他展示品1" style="width: 75%;">
-
+  
 <img src="../assets/images/20250803/display-etc-02.jpg" alt="その他展示品2" style="width: 75%;">
-
+  
 壁には着ぐるみの写真も貼ってありました！(with ミクさん)
 
 <img src="../assets/images/20250803/wall-picture.jpg" alt="壁" style="width: 75%;">
-
+  
 窓辺には河妖屋のキャラクター、春巻と花巻のグッズも置いてありました。可愛い！
 
 <img src="../assets/images/20250803/window-side.jpg" alt="壁" style="width: 75%;">
-
-
+  
 写真に撮れてはいませんが、その他には
 
 - 腰掛ける用の箱型の椅子がいくつか
@@ -62,7 +61,7 @@ image: "20250803/display-kigurumi-01.jpg"
 
 ## 行って見ての感想
 
-着ぐるみが沢山並んでいる光景自体、なかなか見ることができないので着ぐるみが好きな方はテンションが上がると思います。やっぱり画像で見るのと実物を見るのは違います。  
+着ぐるみが沢山並んでいる光景自体、なかなか見ることができないので、着ぐるみが好きな方はテンションが上がると思います。やっぱり画像で見るのと実物を見るのは違います。  
 今回、試着できる着ぐるみは1点のみだったようなのですが、次回は試着可能な着ぐるみが増えるそうなので、期待が膨らみます！
 
 店舗の内容とは直接関係がないのですが、着ぐるみ界隈の人達で会話が生まれていて何か良いなあと思いました。(店舗の趣旨とはずれていることは承知です)
