--- a/_posts/2025-08-03-heyao.md
+++ b/_posts/2025-08-03-heyao.md
@@ -5,7 +5,7 @@ description: "近くに河妖屋実店舗が開店したので行ってきた"
 image: "20250803/display-kigurumi-01.jpg"
 ---
 
-着ぐるみを製作している河妖工房の実店舗が大阪にできるということを聞き、行ってきました！
+着ぐるみを製作している河妖工房の実店舗が大阪にできると聞き、行ってきました！
 
 
 
@@ -55,13 +55,13 @@ image: "20250803/display-kigurumi-01.jpg"
 [搬入前の店舗内の様子](https://x.com/HeyaoFetish/status/1949056856867156443/photo/1)
 
 また、店内にはスタッフさんが数人いて、来店した人からの注文方法や着ぐるみについての質問に答えていました。  
-直接質問できるので、疑問点が何かあっても安心です。
+直接質問できるので、疑問点があっても安心です。
 
-あと8月ということもあり、もちろんクーラーが効いていたので着ぐるみさんにも安心の環境でした。
+あと8月ということもあり、もちろんクーラーが効いていたので、着ぐるみさんにも安心の環境でした。
 
 ## 行って見ての感想
 
-着ぐるみが沢山並んでいる光景自体、なかなか見ることができないので、着ぐるみが好きな方はテンションが上がると思います。やっぱり画像で見るのと実物を見るのは違います。  
+着ぐるみのお面が沢山並んでいる光景自体、なかなか見ることができないので、着ぐるみが好きな方はテンションが上がると思います。やっぱり画像で見るのと実物を見るのは違います。  
 今回、試着できる着ぐるみは1点のみだったようなのですが、次回は試着可能な着ぐるみが増えるそうなので、期待が膨らみます！
 
 店舗の内容とは直接関係がないのですが、着ぐるみ界隈の人達で会話が生まれていて何か良いなあと思いました。(店舗の趣旨とはずれていることは承知です)
