--- a/_posts/2025-05-24-street-festa2025.md
+++ b/_posts/2025-05-24-street-festa2025.md
@@ -1,5 +1,5 @@
 ---
-title: "ストフェスに行ってみた(2025)"
+title: "ストフェスに行ってきた(2025)"
 layout: post
 description: "ちょうど近くでストフェスがあったので行って着ました。"
 image: "20250524/selfie.jpg"
